- renamed method SCIPgetNGlobalConss() to SCIPgetNConss()
- added methods SCIPgetConss(), SCIPgetNOrigConss(), and SCIPgetOrigConss()
- new parameter "printzeros" for methods SCIPprintSol(), SCIPprintTransSol(), SCIPprintBestSol(), and
  SCIPprintBestTransSol()
- new methods SCIPgetFixedVars() and SCIPgetNFixedVars()
- new method SCIPconstructLP() to force constructing the LP of the current node

plugins:
- new presolver "implics" to find bound changes and aggregations out of the implication graph
- logic or constraint handler now adds implications on clauses with 2 literals to the implication graph
- and/or constraint handlers now add implications to the implication graph
- xor constraint handler now uses stronger LP relaxation without auxiliary variable for xor constraint with 2 operands
- modified probing order in probing presolver
- LP file reader now accepts the keyword "Integer" for defining the start of the integer variables section
- added preliminary version of "intdiving" heuristic (disabled in default settings)
- slightly modified restartdfs node selector
- added crossover heuristic
- new file reader for (partial) solutions
- added "write statistics" command to default user dialogs

parameters:
- modified meaning of parameter presolving/probing/maxtotaluseless
- new parameter branching/inference/conflictweight
- heuristics with freq = 0 and freqofs > 0 are now called in depth level freqofs instead of being called in the root node
- added some parameters in local branching and RINS heuristic
- new parameter values 'p'rimal simplex and 'd'ual simplex in lp/initalgorithm and lp/resolvealgorithm

features:
- changed handling of added constraints in separation calls
- modified bookkeeping of locally added and disabled and constraints such that the order of enabling and disabling
  constraints stays the same
- improved performance of the priority queue in conflict analysis

Makefile and Compilation:
- included version number in binary file name